// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add pages allows you to add multiple pages 1`] = `
Array [
  Object {
    "component": "/whatever/index.js",
    "componentChunkName": "component---whatever-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
    "pluginCreatorId": "test",
    "pluginCreator___NODE": "test",
    "updatedAt": 1482363367071,
  },
  Object {
    "component": "/whatever/index.js",
    "componentChunkName": "component---whatever-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHiPizza",
    "jsonName": "hi-pizza.json",
    "path": "/hi/pizza/",
    "pluginCreatorId": "test",
    "pluginCreator___NODE": "test",
    "updatedAt": 1482363367071,
  },
]
`;

exports[`Add pages allows you to add pages 1`] = `
Object {
  "payload": Object {
    "component": "/whatever/index.js",
    "componentChunkName": "component---whatever-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
    "pluginCreatorId": "test",
    "pluginCreator___NODE": "test",
    "updatedAt": 1482363367071,
  },
  "plugin": Object {
    "id": "test",
    "name": "test",
  },
  "traceId": undefined,
  "type": "CREATE_PAGE",
}
`;

exports[`Add pages allows you to add pages 2`] = `
Array [
  Object {
    "component": "/whatever/index.js",
    "componentChunkName": "component---whatever-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
    "pluginCreatorId": "test",
    "pluginCreator___NODE": "test",
    "updatedAt": 1482363367071,
  },
]
`;

exports[`Add pages allows you to add pages with context 1`] = `
Object {
  "payload": Object {
    "component": "/whatever/index.js",
    "componentChunkName": "component---whatever-index-js",
    "context": Object {
      "id": 123,
    },
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
    "pluginCreatorId": "test",
    "pluginCreator___NODE": "test",
    "updatedAt": 1482363367071,
  },
  "plugin": Object {
    "id": "test",
    "name": "test",
  },
  "traceId": undefined,
  "type": "CREATE_PAGE",
}
`;

exports[`Add pages allows you to add pages with context 2`] = `
Array [
  Object {
    "component": "/whatever/index.js",
    "componentChunkName": "component---whatever-index-js",
    "context": Object {
      "id": 123,
    },
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
    "pluginCreatorId": "test",
    "pluginCreator___NODE": "test",
    "updatedAt": 1482363367071,
  },
]
`;

exports[`Add pages allows you to delete paths 1`] = `Array []`;

exports[`Add pages allows you to update existing pages (based on path) 1`] = `
Array [
  Object {
    "component": "/whatever2/index.js",
    "componentChunkName": "component---whatever-2-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
    "pluginCreatorId": "test",
    "pluginCreator___NODE": "test",
    "updatedAt": 1482363367071,
  },
]
`;
